fix(table): fix fixed column background style issue in dark mode

--- a/packages/web-vue/components/table/style/token.less
+++ b/packages/web-vue/components/table/style/token.less
@@ -54,6 +54,9 @@
 @table-color-bg-body-stripe-row: var(~'@{arco-cssvars-prefix}-color-fill-1');
 @table-color-bg-body-row_hover: var(~'@{arco-cssvars-prefix}-color-fill-1');
 @table-color-bg-body-row_active: var(~'@{arco-cssvars-prefix}-color-fill-1');
+@table-color-bg-body-row_active_dark: var(
+  ~'@{arco-cssvars-prefix}-color-neutral-2'
+);
 
 @table-color-expand-icon: var(~'@{arco-cssvars-prefix}-color-text-2');
 @table-color-expand-icon-border: @color-transparent;
